Fix metadata order
Map#copyOf does not preserve order.